; ModuleID = '/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_wii.c_wiimote_data_report.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_wii.c_wiimote_data_report.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connect_wii_wiimote_t = type { i32 }

@WM_CMD_REPORT_TYPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.connect_wii_wiimote_t*, i32)* @wiimote_data_report to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wiimote_data_report(%struct.connect_wii_wiimote_t* %0, i32 %1) #0 {
  %3 = alloca %struct.connect_wii_wiimote_t*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [2 x i32], align 4
  store %struct.connect_wii_wiimote_t* %0, %struct.connect_wii_wiimote_t** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = bitcast [2 x i32]* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 4 %6, i8 0, i64 8, i1 false)
  %7 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %3, align 8
  %8 = icmp ne %struct.connect_wii_wiimote_t* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %3, align 8
  %11 = call i32 @wiimote_is_connected(%struct.connect_wii_wiimote_t* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9, %2
  br label %21

14:                                               ; preds = %9
  %15 = load i32, i32* %4, align 4
  %16 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 1
  store i32 %15, i32* %16, align 4
  %17 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %3, align 8
  %18 = load i32, i32* @WM_CMD_REPORT_TYPE, align 4
  %19 = getelementptr inbounds [2 x i32], [2 x i32]* %5, i64 0, i64 0
  %20 = call i32 @wiimote_send(%struct.connect_wii_wiimote_t* %17, i32 %18, i32* %19, i32 2)
  br label %21

21:                                               ; preds = %14, %13
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @wiimote_is_connected(%struct.connect_wii_wiimote_t*) #2

declare dso_local i32 @wiimote_send(%struct.connect_wii_wiimote_t*, i32, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
